pruebas_ejemplo1/g++_traces/g++_wall_no_parameters.txt
ejemplo1.c: In function ‘void gets_example_func()’:
ejemplo1.c:34:16: error: return-statement with a value, in function returning ‘void’ [-fpermissive]
   34 |         return 1;
      |                ^
ejemplo1.c: In function ‘const char* get_dirname(const char*)’:
ejemplo1.c:41:18: error: invalid conversion from ‘const char*’ to ‘char*’ [-fpermissive]
   41 |   slash = strrchr(pathname, '/');
      |           ~~~~~~~^~~~~~~~~~~~~~~
      |                  |
      |                  const char*
ejemplo1.c: In function ‘void get_y_or_n()’:
ejemplo1.c:53:9: error: ‘gets’ was not declared in this scope; did you mean ‘getw’?
   53 |         gets(response);
      |         ^~~~
      |         getw
ejemplo1.c: In function ‘int main(int, char**)’:
ejemplo1.c:69:23: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   69 |     char *ptr_char  = "new string literal";
      |                       ^~~~~~~~~~~~~~~~~~~~
ejemplo1.c:70:9: warning: unused variable ‘size_array1’ [-Wunused-variable]
   70 |     int size_array1 = strlen("аналитик");
      |         ^~~~~~~~~~~
ejemplo1.c:71:9: warning: unused variable ‘size_array2’ [-Wunused-variable]
   71 |     int size_array2 = 100;
      |         ^~~~~~~~~~~
ejemplo1.c:75:10: warning: unused variable ‘analitic3’ [-Wunused-variable]
   75 |     char analitic3[100]="аналитик";
      |          ^~~~~~~~~
